--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3687,7 +3687,7 @@ header .header-right-element .search-box form button:hover {
 }
 
 .top-bar-wrapper .top-left a i {
-  color: #29673c;
+  color: #A2E2B0;
   padding-right: 8px;
 }
 
@@ -9436,7 +9436,7 @@ footer .footer-bottom .social-links a:last-of-type {
 }
 
 .get-in-touch .single-contact-info .icon.id2 {
-  color: #29673c;
+  color: #FD7062;
 }
 
 .get-in-touch .single-contact-info .icon.id3 {
